--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     volumes:
       - .:/app
     command: gunicorn crue.wsgi:application --bind 0.0.0.0:8000
+    env_file:
+      - .env
   nginx:
     image: nginx:latest
     ports:
