--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - .:/app
     command: gunicorn crue.wsgi:application --bind 0.0.0.0:8000
     env_file:
-      - .env
+      - ./crue/.env
   nginx:
     image: nginx:latest
     ports:
