--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   web:
-    build: .
+    build: ./crue
     volumes:
       - .:/app
     command: gunicorn crue.wsgi:application --bind 0.0.0.0:8000
