--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.8'
 services:
   web:
-    build: ./crue
+    build: .
     volumes:
-      - .:/app
+      - ./crue:/app
     command: gunicorn crue.wsgi:application --bind 0.0.0.0:8000
     env_file:
       - ./crue/.env
