--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,10 @@ upstream django_app {
 server {
     listen 80;
 
+    location /static/ {
+        alias /usr/share/nginx/html/static/;
+    }
+
     location / {
         proxy_pass http://django_app;
         proxy_set_header Host $host;
