--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     volumes:
       - ./crue:/app
-      - static_volume:/app/static
+      - static_volume:/app/staticfiles
     command: gunicorn crue.wsgi:application --bind 0.0.0.0:8000
     env_file:
       - ./crue/.env
@@ -14,7 +14,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - static_volume:/usr/share/nginx/html/static
+      - static_volume:/usr/share/nginx/html/staticfiles
     depends_on:
       - web
 volumes:
