--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,19 @@ upstream django_app {
 
 server {
     listen 80;
+    server_name civiclab.plbayart.fr;
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name civiclab.plbayart.fr;
+
+    ssl_certificate /etc/letsencrypt/live/civiclab.plbayart.fr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/civiclab.plbayart.fr/privkey.pem;
 
     location /static/ {
         alias /usr/share/nginx/html/staticfiles/;
