--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/usr/share/nginx/html/staticfiles
+      - /etc/letsencrypt:/etc/letsencrypt
     depends_on:
       - web
 volumes:
